k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tocabinet-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: www.newboy.ren
    http:
      paths:
      - path: /llmtocabinet/ws
        pathType: Prefix
        backend:
          service:
            name: frontend-tocabinet
            port: {number: 80}
      - path: /render_api
        pathType: Prefix
        backend:
          service:
            name: frontend-tocabinet
            port: {number: 80}
      - path: /llmtocabinet/api
        pathType: Prefix
        backend:
          service:
            name: frontend-tocabinet
            port: {number: 80}
      - path: /llmtocabinet
        pathType: Prefix
        backend:
          service:
            name: frontend-tocabinet
            port: {number: 80}
  - host: newboy.ren
    http:
      paths:
      - path: /llmtocabinet/ws
        pathType: Prefix
        backend:
          service:
            name: frontend-tocabinet
            port: {number: 80}
      - path: /render_api
        pathType: Prefix
        backend:
          service:
            name: frontend-tocabinet
            port: {number: 80}
      - path: /llmtocabinet/api
        pathType: Prefix
        backend:
          service:
            name: frontend-tocabinet
            port: {number: 80}
      - path: /llmtocabinet
        pathType: Prefix
        backend:
          service:
            name: frontend-tocabinet
            port: {number: 80}
